fx-compat: Item box: Fix date added/modified alignment
This CSS needs some serious cleanup, but we're getting somewhere.

--- a/scss/components/_itemBox.scss
+++ b/scss/components/_itemBox.scss
@@ -47,6 +47,11 @@ td > [fieldname] {
 	width: 100%;
 }
 
+.value {
+	min-height: 14px;
+	align-self: center;
+}
+
 .value:not(.multiline) {
 	white-space: nowrap;
 	overflow: hidden;
